--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <h3>thẻ hình ảnh</h3>
-    <img src="img/Tràng_Tiền_Plaza_-_2022-09-02_02.jpg" alt="Cờ việt nam"
+    <img src="img/Tràng_Tiền_Plaza_-_2022-09-02_02.jpg" alt=""
                                 style="width:200px;height:100px;" >                                  
     <a href="https://trangtienplaza.net/" >Trang chủ tràng tiền plaza</a>
 
